ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project-final13-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-final13-service
                port:
                  number: 80
